# netatmo-exporter

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  dashboard.json  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  docker-pr.yml  mirror-codeberg.yml  test.yml
.run/: Netatmo-Client.run.xml  Test Client.run.xml
netatmo-exporter/: client.py  config.yaml.template  netatmo_api.py
src/: client.py  config.yaml.template  helpers.py  netatmo_api.py  pyproject.toml
