[project]
name = "netatmo-exporter"
description = "A basic exporter for netatmo api"
version = "0.1.0"
authors = [
    { name = "Dennis Bernardy", email = "dennis@ethernerd.net" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyatmo>=7.6,<8",
    "prometheus-client>=0.23",
    "pyyaml>=6.0.2,<7.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"
