[project]
name = "netatmo-exporter"
description = "A basic exporter for netatmo api"
version = "0.1.0"
authors = [
    { name = "Dennis Bernardy", email = "dennis@ethernerd.net" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "prometheus-client",
    "pyyaml",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"
